@@ -14,7 +14,7 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 --/--/16 tyler.je.reddy, kain88-de, richardjgowers, manuel.nuno.melo,
-         orbeckst
+         orbeckst, Balasubra
 
   * 0.13.0
 
@@ -45,6 +45,7 @@ Enhancement
   * Added analysis.rdf, with InterRDF tool. (Issue #460)
   * Made Reader.check_slice_indices a public method (Issue #604)
   * analysis.helanal.helanal_main() now returns results as dict
+  * Added keyword to update selection every frame in density calculation (Issue #584) 
 
 Changes
 
